add additional views and clean code

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,5 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Main</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-</head>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">>
+<head th:replace="header"></head>
 <body>
 <div class="table-responsive">
     <table id="launch" class="table" style="width:100%">
@@ -21,7 +14,8 @@
         </thead>
         <tbody>
         <tr th:each="launch : ${launches}">
-            <td><img th:src="${(launch.links.mission_patch_small != null) ? launch.links.mission_patch_small : 'images/default-patch.png'}" th:alt="${patch}" style="max-width:64px"/></td>
+            <td><img th:src="${(launch.links.mission_patch_small != null) ? launch.links.mission_patch_small : 'images/default-patch.png'}"
+                    th:alt="${patch}" style="max-width:64px"/></td>
             <td><a th:href="@{'/launch/' + ${launch.id}}" th:text="${launch.id}"></a></td>
             <td th:text="${(!launch.mission_id.isEmpty()) ? launch.mission_id : 'unknown' }"></td>
             <td th:text="${launch.rocket.rocket_name}"></td>
@@ -30,7 +24,6 @@
         </tbody>
     </table>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-</body>
+<div th:replace="footer"></div>
 </body>
 </html>
